--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+lib/
+
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
