--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 lib/
+_git_untracked/
 
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
