commented out some unused library dependencies fixed a few warnings

--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -87,8 +87,8 @@ set(INDICUS_ENGINE_LINK_SETTINGS
     -lGL
     -lSDL2main
     -lSDL2
-    -lpng
-    -lassimp
+#    -lpng
+#    -lassimp
     -lptlib
     -lmath3d
 )
