project: added "-Wno-unused-parameter" compiler flag

--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -33,7 +33,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${MY_OUTPUT_DIR_DEBUG})
 
 set(CMAKE_CACHEFILE_DIR ${MY_BUILD_DIR})
 
-set(MY_COMPILE_FLAGS "-Wall -Wextra")
+set(MY_COMPILE_FLAGS "-Wall -Wextra -Wno-unused-parameter")
 set(CMAKE_C_FLAGS ${MY_COMPILE_FLAGS})
 set(CMAKE_CXX_FLAGS ${MY_COMPILE_FLAGS})
 
