removed unnecessary list of Indicus headers in test project files

--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -169,7 +169,7 @@ SET(CMAKE_INSTALL_RPATH "$\{ORIGIN\}")
 add_executable(indicus_test
     ${INDICUS_TEST_SOURCE_FILES}
     ${INDICUS_TEST_HEADER_FILES}
-    ${INDICUS_ENGINE_HEADER_FILES}
+#    ${INDICUS_ENGINE_HEADER_FILES}
 )
 
 target_include_directories(indicus_test PRIVATE
