--- a/projects/win64/CMakeLists.txt
+++ b/projects/win64/CMakeLists.txt
@@ -43,31 +43,45 @@ set(CMAKE_CXX_FLAGS ${MY_COMPILE_FLAGS})
 
 #all generic engine source files go in this variable
 set(INDICUS_ENGINE_SOURCE_FILES
-    ${MY_PROJ_ROOT}/src/component.cpp
-    ${MY_PROJ_ROOT}/src/engine.cpp
-    ${MY_PROJ_ROOT}/src/entity.cpp
-    ${MY_PROJ_ROOT}/src/realcomponent.cpp
-    ${MY_PROJ_ROOT}/src/services.cpp
-    ${MY_PROJ_ROOT}/src/sdlapplication.cpp
-    ${MY_PROJ_ROOT}/src/sdlcontrol.cpp
-    ${MY_PROJ_ROOT}/src/world.cpp
-    ${MY_PROJ_ROOT}/src/worldcomponent.cpp
+    ${MY_PROJ_ROOT}/src/BasicPositionComponent.cpp
+    ${MY_PROJ_ROOT}/src/Camera.cpp
+    ${MY_PROJ_ROOT}/src/Camera2D.cpp
+    ${MY_PROJ_ROOT}/src/Component.cpp
+    ${MY_PROJ_ROOT}/src/DrawableComponent.cpp
+    ${MY_PROJ_ROOT}/src/DrawingManager.cpp
+    ${MY_PROJ_ROOT}/src/Engine.cpp
+    ${MY_PROJ_ROOT}/src/Entity.cpp
+    ${MY_PROJ_ROOT}/src/RealComponent.cpp
+    ${MY_PROJ_ROOT}/src/Services.cpp
+    ${MY_PROJ_ROOT}/src/SDLApplication.cpp
+    ${MY_PROJ_ROOT}/src/SDLControl.cpp
+    ${MY_PROJ_ROOT}/src/SDLBillboardComponent.cpp
+    ${MY_PROJ_ROOT}/src/World.cpp
+    ${MY_PROJ_ROOT}/src/WorldComponent.cpp
 )
 
 #all generic engine header files go in this variable
 set(INDICUS_ENGINE_HEADER_FILES
-    ${MY_PROJ_ROOT}/include/component.h
-    ${MY_PROJ_ROOT}/include/entity.h
-    ${MY_PROJ_ROOT}/include/engine.h
-    ${MY_PROJ_ROOT}/include/enginecontrol.h
-    ${MY_PROJ_ROOT}/include/engineevent.h
-    ${MY_PROJ_ROOT}/include/networking.h
-    ${MY_PROJ_ROOT}/include/realcomponent.h
-    ${MY_PROJ_ROOT}/include/services.h
-    ${MY_PROJ_ROOT}/include/sdlapplication.h
-    ${MY_PROJ_ROOT}/include/sdlcontrol.h
-    ${MY_PROJ_ROOT}/include/world.h
-    ${MY_PROJ_ROOT}/include/worldcomponent.h
+    ${MY_PROJ_ROOT}/include/BasicPositionComponent.h
+    ${MY_PROJ_ROOT}/include/Camera.h
+    ${MY_PROJ_ROOT}/include/Camera2D.h
+    ${MY_PROJ_ROOT}/include/Component.h
+    ${MY_PROJ_ROOT}/include/DrawingControl.h
+    ${MY_PROJ_ROOT}/include/DrawableComponent.h
+    ${MY_PROJ_ROOT}/include/DrawingManager.h
+    ${MY_PROJ_ROOT}/include/Entity.h
+    ${MY_PROJ_ROOT}/include/Engine.h
+    ${MY_PROJ_ROOT}/include/EngineControl.h
+    ${MY_PROJ_ROOT}/include/EngineEvent.h
+    ${MY_PROJ_ROOT}/include/Networking.h
+    ${MY_PROJ_ROOT}/include/RealComponent.h
+    ${MY_PROJ_ROOT}/include/Services.h
+    ${MY_PROJ_ROOT}/include/SDLApplication.h
+    ${MY_PROJ_ROOT}/include/SDLBillboardComponent.h
+    ${MY_PROJ_ROOT}/include/SDLControl.h
+    ${MY_PROJ_ROOT}/include/SDLDrawableComponent.h
+    ${MY_PROJ_ROOT}/include/World.h
+    ${MY_PROJ_ROOT}/include/WorldComponent.h
 )
 
 #all engine include directories go in this variable
@@ -111,19 +125,21 @@ set(INDICUS_ENGINE_COMPILE_DEFINITIONS
 
 #all test source files go in this variable
 set(INDICUS_TEST_SOURCE_FILES
-    ${MY_PROJ_ROOT}/src/main.cpp
-    ${MY_PROJ_ROOT}/src/test/sdl_keytester.cpp
-    ${MY_PROJ_ROOT}/src/test/ticktester_game.cpp
-    ${MY_PROJ_ROOT}/src/test/ticktester_printercomponent.cpp
-    ${MY_PROJ_ROOT}/src/test/ticktester_printerentity.cpp
+    ${MY_PROJ_ROOT}/src/Main.cpp
+    ${MY_PROJ_ROOT}/src/test/SDLKeytester.cpp
+    ${MY_PROJ_ROOT}/src/test/ticktester/Game.cpp
+    ${MY_PROJ_ROOT}/src/test/ticktester/PlayerPawn.cpp
+    ${MY_PROJ_ROOT}/src/test/ticktester/PrinterComponent.cpp
+    ${MY_PROJ_ROOT}/src/test/ticktester/PrinterEntity.cpp
 )
 
 #all test header files go in this variable
 set(INDICUS_TEST_HEADER_FILES
-    ${MY_PROJ_ROOT}/include/test/sdl_keytester.h
-    ${MY_PROJ_ROOT}/include/test/ticktester_game.h
-    ${MY_PROJ_ROOT}/include/test/ticktester_printercomponent.h
-    ${MY_PROJ_ROOT}/include/test/ticktester_printerentity.h
+    ${MY_PROJ_ROOT}/include/test/SDLKeytester.h
+    ${MY_PROJ_ROOT}/include/test/ticktester/Game.h
+    ${MY_PROJ_ROOT}/include/test/ticktester/PlayerPawn.h
+    ${MY_PROJ_ROOT}/include/test/ticktester/PrinterComponent.h
+    ${MY_PROJ_ROOT}/include/test/ticktester/PrinterEntity.h
 )
 
 #all test include directories go in this variable
@@ -171,7 +187,6 @@ SET(CMAKE_INSTALL_RPATH "$\{ORIGIN\}")
 add_executable(indicus_test
     ${INDICUS_TEST_SOURCE_FILES}
     ${INDICUS_TEST_HEADER_FILES}
-#    ${INDICUS_ENGINE_HEADER_FILES}
 )
 
 target_include_directories(indicus_test PRIVATE
@@ -190,6 +205,7 @@ target_compile_definitions(indicus_test PRIVATE
     ${INDICUS_ENGINE_COMPILE_DEFINITIONS}
 )
 
+add_dependencies(indicus_test indicus)
 
 #--------------------------------------------------
 
