mirrored changes from debian project into win64 project updated doc

--- a/projects/win64/CMakeLists.txt
+++ b/projects/win64/CMakeLists.txt
@@ -92,8 +92,8 @@ set(INDICUS_ENGINE_INCLUDE_DIRECTORIES
     ${MY_PROJ_ROOT}/lib/math3d/include
 )
 
-#all libraries linked to engine go in this variable
-set(INDICUS_ENGINE_LINK_SETTINGS
+#all libraries shared by indicus lib and executables that link to indicus lib go in this variable
+set(INDICUS_SHARED_LINK_SETTINGS
     -L"${MY_PROJ_ROOT}/lib"
     -L"${MY_PROJ_ROOT}/lib/SDL2/bin"
     -L"${MY_PROJ_ROOT}/lib/ptlib/bin"
@@ -101,13 +101,27 @@ set(INDICUS_ENGINE_LINK_SETTINGS
     -lmingw32
     -lSDL2main
     -lSDL2
-#     -lGLEW
-#     -lGL
-#     -lpng
-#     -lassimp
-     -lptlib
-     -lmath3d
+#    -lGLEW
+#    -lGL
+#    -lpng
+#    -lassimp
+#    -lptlib
+#    -lmath3d
 )
+
+#all libraries statically linked to indicus lib go in this variable
+#  note that only here should ptlib be linked to (statically)
+#    executables linking to indicus lib shouldn't themselves link directly to 'ptlib'
+#    rather access 'ptlib' contents through linking to indicus lib
+#
+#    (the double-linked 'ptlib' logging code may execute a double free somewhere during memory cleanup
+#      after the last line of the program, causing a crash right before exiting
+#      VERY VERY weird issue)
+set(INDICUS_ENGINE_STATIC_LINK_SETTINGS
+    -lptlib
+    -lmath3d
+)
+
 
 set(INDICUS_ENGINE_COMPILE_DEFINITIONS
 #'math3d' macros (need to be same as the lib was build with)
@@ -148,6 +162,10 @@ set(INDICUS_TEST_INCLUDE_DIRECTORIES
     ${MY_PROJ_ROOT}/include
 )
 
+#all libraries only linked to engine testing go in this variable
+#set(INDICUS_TEST_LINK_SETTINGS
+#)
+
 #--------------------------------------------------
 # dynamic engine library
 #--------------------------------------------------
@@ -166,8 +184,9 @@ set_target_properties(indicus PROPERTIES COMPILE_FLAGS
     "${MY_COMPILE_FLAGS} -fPIC"
 )
 
-target_link_libraries(indicus
-    ${INDICUS_ENGINE_LINK_SETTINGS}
+target_link_libraries(indicus PUBLIC
+    "${INDICUS_SHARED_LINK_SETTINGS}"
+    "${INDICUS_ENGINE_STATIC_LINK_SETTINGS}"
 )
 
 target_compile_definitions(indicus PRIVATE
@@ -194,8 +213,11 @@ target_include_directories(indicus_test PRIVATE
     ${INDICUS_ENGINE_INCLUDE_DIRECTORIES}
 )
 
+#TODO: branch out based on debug or release build
+#       and only look for libs in the appropriate folder
 target_link_libraries(indicus_test
-    ${INDICUS_ENGINE_LINK_SETTINGS}
+    ${INDICUS_SHARED_LINK_SETTINGS}
+#    ${INDICUS_TEST_LINK_SETTINGS}
     -L"${MY_OUTPUT_DIR}"
     -L"${MY_OUTPUT_DIR_DEBUG}"
     -lindicus
