TickTester   replaced 'BillboardComponents' with a new 'ColorRectComponent' in 'PlayerPawn'   Floater radius can now be controlled with keypad + -   set initial colors for all components to be white   added disabled code to check for dependencies during tick     (does not work yet)

--- a/projects/win64/CMakeLists.txt
+++ b/projects/win64/CMakeLists.txt
@@ -141,6 +141,7 @@ set(INDICUS_ENGINE_COMPILE_DEFINITIONS
 set(INDICUS_TEST_SOURCE_FILES
     ${MY_PROJ_ROOT}/src/Main.cpp
     ${MY_PROJ_ROOT}/src/test/SDLKeytester.cpp
+    ${MY_PROJ_ROOT}/src/test/ticktester/ColorRectComponent.cpp
     ${MY_PROJ_ROOT}/src/test/ticktester/Game.cpp
     ${MY_PROJ_ROOT}/src/test/ticktester/PlayerPawn.cpp
     ${MY_PROJ_ROOT}/src/test/ticktester/PrinterComponent.cpp
@@ -150,7 +151,9 @@ set(INDICUS_TEST_SOURCE_FILES
 #all test header files go in this variable
 set(INDICUS_TEST_HEADER_FILES
     ${MY_PROJ_ROOT}/include/test/SDLKeytester.h
+    ${MY_PROJ_ROOT}/include/test/ticktester/ColorRectComponent.h
     ${MY_PROJ_ROOT}/include/test/ticktester/Game.h
+    ${MY_PROJ_ROOT}/include/test/ticktester/IListener.h
     ${MY_PROJ_ROOT}/include/test/ticktester/PlayerPawn.h
     ${MY_PROJ_ROOT}/include/test/ticktester/PrinterComponent.h
     ${MY_PROJ_ROOT}/include/test/ticktester/PrinterEntity.h
