--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -43,6 +43,10 @@ set(CMAKE_CXX_FLAGS ${MY_COMPILE_FLAGS})
 
 #all generic engine source files go in this variable
 set(INDICUS_ENGINE_SOURCE_FILES
+    ${MY_PROJ_ROOT}/src/engine/experimental/Actor.cpp
+    ${MY_PROJ_ROOT}/src/engine/experimental/Component.cpp
+    ${MY_PROJ_ROOT}/src/engine/experimental/Message.cpp
+    ${MY_PROJ_ROOT}/src/engine/experimental/Scheduler.cpp
     ${MY_PROJ_ROOT}/src/engine/Camera.cpp
     ${MY_PROJ_ROOT}/src/engine/Camera2D.cpp
     ${MY_PROJ_ROOT}/src/engine/Component.cpp
@@ -65,6 +69,10 @@ set(INDICUS_ENGINE_SOURCE_FILES
 
 #all generic engine header files go in this variable
 set(INDICUS_ENGINE_HEADER_FILES
+    ${MY_PROJ_ROOT}/include/engine/experimental/Actor.h
+    ${MY_PROJ_ROOT}/include/engine/experimental/Component.h
+    ${MY_PROJ_ROOT}/include/engine/experimental/Message.h
+    ${MY_PROJ_ROOT}/include/engine/experimental/Scheduler.h
     ${MY_PROJ_ROOT}/include/engine/Camera.h
     ${MY_PROJ_ROOT}/include/engine/Camera2D.h
     ${MY_PROJ_ROOT}/include/engine/Common.h
